--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,15 @@ version: '3'
 services:
   mysql-db:
     container_name: mysql-db
-    env_file:
-      - .env
     image: "mysql/mysql-server:5.7" 
     ports:
-      - "3307:3306"
+      - "3306:3306"
+    environment:
+      - MYSQL_ONETIME_PASSWORD=true
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=admin
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DB=ppflow
     networks:
       springboot-mysql-network:
         aliases:
