--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: '3.1'
 services:
   ppflow-mysql:
     container_name: ppflow-mysql
-    image: mysql:8
+    image: mysql:latest
     ports:
       - "3306:3306"
     environment:
@@ -20,7 +20,6 @@ services:
     build:
         context: .
         dockerfile: Dockerfile
-    restart: on-failure
     ports:
       - "9090:9090"
     depends_on:
